--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
         <div class="container" id="m1">
             <div class="row">
                 <div class="col-12 text-center mt-3">
-                    <h2 class="sps-logo"><a href="index.html" class="text-black">SPS<span id="logo-span">.</span></a>
+                    <h2 class="sps-logo"><a href="index.html" class="text-black stitle">SPS<span id="logo-span">.</span></a>
                     </h2>
                 </div>
             </div>
             <div class="site-section">
                 <div class="row mb-5 site site-section feature-big">
                     <div class="col-lg-7" id="m2">
-                        <img src="whatssps.png" class="img-fluid mb-5" alt="">
+                        <img src="whatssps.png" class="img-fluid mb-5 spsimg" alt="">
+                        <iframe class="hidden spsvideo" width="635" height="358" src="https://www.youtube.com/embed/I9QGnNvrmoY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col-lg-5 ps-lg-5 ms-auto mt-md-5 text-black">
                         <h2 style="font-weight: 900; font-size: 40px;">
@@ -33,7 +34,7 @@
                         </h2>
                         <p class="mb-3">From Zero to a high paid Software Engineer in 180 days.</p>
                         <div>
-                            <a href="#" id="apply-btn" class="btn btn-primary me-2 mb-2">Apply Now</a>
+                            <a href="registrationForm.html" id="apply-btn" class="btn btn-primary me-2 mb-2">Apply Now</a>
                             <p class="mb-2">(NB: Read all the FAQs carefully before you<br>
                                 submit the application)</p>
                         </div>
@@ -67,7 +68,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" id="feature_sec">
                         <div class="unit-4 d-block" id="feature_div">
-                            <div class="unit-4-icon mb-4">
+                            <div class="mb-4">
                                 
                                 <span class="material-icons">
                                     school
@@ -1151,7 +1152,7 @@
                                 email
                                 </span>
                             <div class="info ">
-                                <h4>Genaral Support</h4>
+                              <h1 style="font-size: 23px; font-weight: 400;">Genaral Support</h1>
                                 <a class="call" href="mailto:sps@packapeer.com">sps@packapeer.com</a>
                             </div>
                         </div>
@@ -1179,5 +1180,6 @@
         
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<script src="video.js"></script>
 </body>
 </html>
