completed Sps-Website

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <div class="container">
                 <div class="row mb-5 site-section border-bottom">
                     <div class="col-lg-7"> 
-                        <img src="Howspsworks.png" class="img-fluid mt-5 mb-5" style="cursor: pointer;" alt="">
+                        <img src="Howspsworks.png" class="img-fluid mt-5 mb-5 spsimg-2" style="cursor: pointer;" alt="">
+                        <iframe class="hidden spsvideo-2" width="635" height="358" src="https://www.youtube.com/embed/ckub1RSlhic" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="col-lg-5 ps-lg-5 ms-auto mt-md-5" id="brief_sec">
                         <h1 class="mb-4" style="font-size: 40px; font-weight: 900;">SPS in Brief?</h1>
@@ -267,7 +268,8 @@
                 <h1 class="pb-3 pt-2 text-black" style="font-size:40px; font-weight: 900;">Want to join SPS?</h1>
                 
                 <div class="col-12">
-                    <img src="whocanjoinsps.png" alt="youtube video of who can join sps" class="img-fluid mt-5 mb-5" style="cursor: pointer;">
+                    <img src="whocanjoinsps.png" alt="youtube video of who can join sps" class="img-fluid mt-5 mb-5 spsimg-3" style="cursor: pointer;">
+                    <iframe class="hidden spsvideo-3" width="1080" height="607" src="https://www.youtube.com/embed/xkmM6h32lnM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <p>3 step process to join the SPS</p>
                 <!---------first section----->
@@ -333,7 +335,8 @@
                   <p>If you failed to qualify the interview, then prepare well, schedule it again and repeat the process until you
                     win.</p>
                     <div class="col-12">
-                        <img src="howmuchdoesitcost.png" alt="video of how much does it cost" class="img-fluid mt-5 mb-5">
+                        <img src="howmuchdoesitcost.png" alt="video of how much does it cost" class="img-fluid mt-5 mb-5 spsimg-4">
+                        <iframe class="hidden spsvideo-4" width="1080" height="607" src="https://www.youtube.com/embed/vhG3wKGp2mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
             </div>
         </div>
@@ -344,7 +347,8 @@
                 <h1 class="pb-4 border-bottom" style="font-size: 40px; font-weight: 900;">Convocation</h1>
             </div>
             <div class="col-12">
-                <img src="ConvocationCeremony.png" alt="convovation cerymony" class="img-fluid mb-5 mt-5">
+                <img src="ConvocationCeremony.png" alt="convovation cerymony" class="img-fluid mb-5 mt-5 spsimg-5">
+                <iframe class="hidden spsvideo-5" width="1080" height="607" src="https://www.youtube.com/embed/m_hx0Ebg5Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
