--- a/registrationForm.html
+++ b/registrationForm.html
@@ -102,7 +102,7 @@
                 <div class="row pt-4 pb-5">
                     <div class="col-12">
                         <div class="form-check agree">
-                            <input class="form-check-input box" name="agreement" type="checkbox" value="" id="flexCheckDefault">
+                            <input class="form-check-input box" name="agreement" type="checkbox" value="agreed" id="flexCheckDefault">
                             <label class="form-check-label" for="flexCheckDefault" style="color: #858585;">
                               I agree that I have read and understood all the <em style="font-style: normal; color: #00D2B5;">FAQs</em>
                             </label>
